test/typecheck/errors/bad-views5.boa
view sv3 {
	o: output sum of int;
}

v := sv3/o;

c := v._f;
